# RAIL-BENCH_toolkit

./: .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml  test_viz.ipynb
Benchmarks/RAILBENCH_Object/: check_formatting.py  railbench_object.py  run_object_eval.py
Benchmarks/RAILBENCH_Object/format/: gt_format.md  pred_format.md
Benchmarks/RAILBENCH_Object/metrics/: bounding_box.py  enumerators.py  eval_objects.py  general_utils.py  rb_evaluator.py
Benchmarks/RAILBENCH_Rail/: check_formatting.py  rail_metrics.py  run_rail_eval.py
Benchmarks/RAILBENCH_Rail/format/: gt_format.md  pred_format.md  railbench_rail_test_image_infos.json
Benchmarks/RAILBENCH_Rail/metrics/ChamferAP/: chamfer_ap.py  chamfer_distance.py  chamfer_viz.py
Benchmarks/RAILBENCH_Rail/metrics/LineAP/: lineAP_viz.py  line_ap_metric.py  polyline_matching.py  (+3 more)
Benchmarks/RAILBENCH_Rail/utils/: ignore_areas.py
Benchmarks/RAILBENCH_Rail/viz/: image.py  viz_lines.py
Benchmarks/RAILBENCH_Tracking/: check_formatting.py  run_tracking_eval.py
Benchmarks/RAILBENCH_Tracking/format/: gt_format.md  pred_format.md  railbench_tracking_test_image_infos.json
Benchmarks/RAILBENCH_Tracking/trackeval/: __init__.py  _timing.py  eval.py  plotting.py  utils.py
Benchmarks/RAILBENCH_Vegetation/: check_formatting.py  file_checks.py  iou_scores.py  railbench_vegetation.py  run_veg_eval.py
Benchmarks/RAILBENCH_Vegetation/format/: format_rules.md  railbench_test_image_infos.json
annotation_visualizer/: visualize_rails.py
utils/: helpers.py
utils/viz/: colors.py  viz_image.py
(+7 files in other folders)
